<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="gcm_defaultSenderId">232858861498</string>
    <string name="app_name">Tingler</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_fb">Sign in with Facebook</string>
    <string name="btn_google">    Sign in with Google    </string>
    <string name="signup_txt">Or Sign up with your mobile number</string>
    <string name="etxt_mobile_hint">Mobile number</string>
    <string name="btn_signup">   SIGN UP   </string>
    <string name="txt_account">Do you have account</string>
    <string name="txt_password_hint">Password</string>
    <string name="etxt_password_hint">Password</string>
    <string name="btn_login">   LOGIN   </string>
    <string name="txt_accountactive_error">Please check your mobile for code</string>
    <string name="txt_otp">We sent you OTP code to your mobile</string>
    <string name="etxt_otp_hint">OTP code</string>
    <string name="btn_account_active">Active Account</string>
    <string name="etxt_fn">First Name</string>
    <string name="etxt_ln">Last Name</string>
    <string name="etxt_email">Email id</string>
    <string name="etxt_contact">Contact Number</string>
    <string name="etxt_country">Country</string>
    <string name="etxt_city">City</string>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="days">
        <item>0</item>
          <item>1</item>
          <item>2</item>
          <item>3</item>
          <item>4</item>
          <item>5</item>
          <item>6</item>
          <item>7</item>
    </string-array>
    
    
    <string name="etxt_status">Status</string>
    <string name="btn_clear">Clear</string>
    <string name="btn_save">Save</string>
    <string name="btn_createchallenge">Create Challenge</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="btn_forgot">Forgot</string>
    <string name="facebook_appid">1063645003655210</string>
    <string name="etxt_price_hint">Custom challengee prize type here</string>

</resources>