<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <include
        android:id="@+id/toolBar"
        layout="@layout/appbar" >
    </include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="396dp"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageview_profile"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@drawable/no_image_icon" />

            <EditText
                android:id="@+id/etxt_fname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/etxt_fn"
                android:textColor="@android:color/black" >
            </EditText>

            <EditText
                android:id="@+id/etxt_lname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/welcome_margin_top"
                android:ems="10"
                android:hint="@string/etxt_ln"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/etxt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/welcome_margin_top"
                android:ems="10"
                android:hint="@string/etxt_email"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/etxt_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/welcome_margin_top"
                android:ems="10"
                android:hint="@string/etxt_contact"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/etxt_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/welcome_margin_top"
                android:ems="10"
                android:hint="Password"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/etxt_cpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/welcome_margin_top"
                android:ems="10"
                android:hint="Confirm Password"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/welcome_margin_top_bottom"
                android:layout_marginTop="@dimen/welcome_margin_top"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/btn_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_round"
                    android:paddingBottom="@dimen/btn_padding_bottom"
                    android:paddingTop="@dimen/btn_padding_top"
                    android:text="@string/btn_clear" />

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:background="@drawable/button_round"
                    android:paddingBottom="@dimen/btn_padding_bottom"
                    android:paddingTop="@dimen/btn_padding_top"
                    android:text="@string/btn_save" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>