<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <include
        android:id="@+id/toolBar"
        layout="@layout/appbar" >
    </include>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layout_margin_left"
            android:layout_marginRight="@dimen/layout_margin_right"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_fb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/welcome_margin_top_bottom"
                android:background="@drawable/btn_facebook"
                android:paddingLeft="@dimen/btn_paddding_left"
                android:paddingRight="@dimen/btn_paddding_right"
                android:text="@string/btn_fb"
                android:textAllCaps="false"
                android:textColor="@color/btnTxtColor" />

            <Button
                android:id="@+id/btn_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/welcome_margin_top_item"
                android:background="@drawable/btn_google"
                android:paddingLeft="@dimen/btn_paddding_left"
                android:paddingRight="@dimen/btn_paddding_right"
                android:text="@string/btn_google"
                android:textAllCaps="false"
                android:textColor="@color/btnTxtColor" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/welcome_margin_top_item"
                android:text="@string/signup_txt"
                android:textColor="@color/darkGray" />

            <EditText
                android:id="@+id/etxt_mobile_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/welcome_margin_top_item"
                android:background="@drawable/etxt_border"
                android:ems="10"
                android:hint="@string/etxt_mobile_hint"
                android:inputType="phone"
                android:maxLength="13"
                android:textColor="@android:color/black" >
            </EditText>

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/btn_height"
                android:layout_marginBottom="@dimen/welcome_signup_bottom"
                android:layout_marginTop="@dimen/welcome_margin_top_item"
                android:background="@drawable/btn_primary"
                android:paddingLeft="@dimen/btn_paddding_left"
                android:paddingRight="@dimen/btn_paddding_right"
                android:text="SIGN UP"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/welcome_margin_top"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/txt_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/welcome_margin_top_item"
                android:text="@string/txt_account"
                android:textColor="@color/darkGray" />

            <EditText
                android:id="@+id/etxt_mobile_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/welcome_margin_top_item"
                android:background="@drawable/etxt_border"
                android:ems="10"
                android:hint="@string/etxt_mobile_hint"
                android:inputType="phone"
                android:maxLength="13"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/etxt_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/welcome_margin_top_item"
                android:background="@drawable/etxt_border"
                android:ems="10"
                android:hint="@string/etxt_password_hint"
                android:maxLength="25"
                android:password="true"
                android:textColor="@android:color/black" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/welcome_margin_top_bottom"
                android:layout_marginTop="@dimen/welcome_margin_top"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/btn_height"
                    android:layout_marginTop="@dimen/welcome_margin_top_item"
                    android:background="@drawable/btn_primary"
                    android:paddingLeft="@dimen/btn_paddding_left"
                    android:paddingRight="@dimen/btn_paddding_right"
                    android:text="LOGIN"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/txt_forgot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/welcome_margin_top_item"
                    android:text="Forgot your password?"
                    android:textColor="@color/darkGray" />
            </LinearLayout>
            <!-- </ScrollView> -->
        </LinearLayout>
    </ScrollView>

</LinearLayout>